After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724871 - Warning fixes
Warning fixes
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2014-02-21 11:45 UTC by Bastien Nocera
Modified: 2014-02-23 22:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
pls: Fix redefinition of compiler args (853 bytes, patch)
2014-02-21 11:45 UTC, Bastien Nocera
committed Details | Review
core: Fix API documentation typo (1004 bytes, patch)
2014-02-21 11:45 UTC, Bastien Nocera
committed Details | Review
pls: Fix build with grilo never installed (1.09 KB, patch)
2014-02-23 18:04 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2014-02-21 11:45:29 UTC
.
Comment 1 Bastien Nocera 2014-02-21 11:45:38 UTC
Created attachment 269897 [details] [review]
pls: Fix redefinition of compiler args
Comment 2 Bastien Nocera 2014-02-21 11:45:43 UTC
Created attachment 269898 [details] [review]
core: Fix API documentation typo

../../src/data/grl-data.c:389: warning: Parameter description
for grl_data_get_boolean::key is missing in source code comment block.
Comment 3 Juan A. Suarez Romero 2014-02-22 22:46:08 UTC
Attachment 269897 [details] pushed as 5f88b53 - pls: Fix redefinition of compiler args
Attachment 269898 [details] pushed as bd2a387 - core: Fix API documentation typo
Comment 4 Colin Walters 2014-02-23 00:24:52 UTC
What's the error here?

Did you see the rationale in my commit https://git.gnome.org/browse/grilo/commit/?id=3f66bb29a2d0f81479a435c1fabc80c08c4961be

Not having this means the build won't work unless an *old version* of grilo happens to be installed in the root.

I'm going to tag grilo in Continuous for now:
https://git.gnome.org/browse/gnome-continuous/commit/?id=603fdf1459f9ebad548bbc30c41405827cbfc11c
Comment 5 Colin Walters 2014-02-23 00:25:32 UTC
You should likely be able to reproduce the problem with:

jhbuild uninstall grilo
apt-get/yum remove grilo-devel
jhbuild buildone grilo
Comment 6 Bastien Nocera 2014-02-23 18:00:51 UTC
(In reply to comment #4)
> What's the error here?

Your patch does:
+INTROSPECTION_COMPILER_ARGS = --includedir=$(top_builddir)/src

Which is already done line 49:
https://git.gnome.org/browse/grilo/tree/libs/pls/Makefile.am#n49

With:
INTROSPECTION_COMPILER_ARGS = --includedir=$(top_srcdir)/src

What does remove the duplicate definition break exactly?
Comment 7 Bastien Nocera 2014-02-23 18:01:38 UTC
Right, I see the problem now. Both commits are broken...
Comment 8 Bastien Nocera 2014-02-23 18:04:29 UTC
Created attachment 270058 [details] [review]
pls: Fix build with grilo never installed

This re-applies the fix from:
https://git.gnome.org/browse/grilo/commit/?id=3f66bb29a2d0f81479a435c1fabc80c08c4961be

Which got broken by the wrong de-duplicating done in
5f88b535800d1105439641795ddd2e07fd113744
Comment 9 Colin Walters 2014-02-23 20:12:15 UTC
Review of attachment 270058 [details] [review]:

Ah, I see.  Thanks for investigating this.  Please also feel free to revert the tag commit to gnome-continuous after you push this.
Comment 10 Juan A. Suarez Romero 2014-02-23 22:22:11 UTC
Attachment 270058 [details] pushed as 790f350 - pls: Fix build with grilo never installed