core: Fix API documentation typo

../../src/data/grl-data.c:389: warning: Parameter description
for grl_data_get_boolean::key is missing in source code comment block.

https://bugzilla.gnome.org/show_bug.cgi?id=724871